src/test/ui/suggestions/suggest-impl-trait-lifetime.stderr
error[E0310]: the parameter type `impl Debug` may not live long enough
  --> $DIR/suggest-impl-trait-lifetime.rs:7:5
   |
LL |     bar(d);
   |     ^^^
   |
note: ...so that the type `impl Debug` will meet its required lifetime bounds
  --> $DIR/suggest-impl-trait-lifetime.rs:7:5
   |
LL |     bar(d);
   |     ^^^
help: consider adding an explicit lifetime bound  `'static` to `impl Debug`...
   |
LL | fn foo(d: impl Debug + 'static) {
   |           ^^^^^^^^^^^^^^^^^^^^

error: aborting due to previous error

For more information about this error, try `rustc --explain E0310`.
